
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "leaguetavern_native_bridge"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

[target.'cfg(windows)'.dependencies]
ntapi = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
